--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\FOXFLASH\1.jpg" alt="..." />
+                            <img class="card-img-top" src="OLX/FOXFLASH/1.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -88,7 +88,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\KESS\1450300.png" alt="..." />
+                            <img class="card-img-top" src="OLX/KESS/1450300.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -118,7 +118,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\LAUNCH TPMS\1.png" alt="..." />
+                            <img class="card-img-top" src="OLX/LAUNCH TPMS/1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -138,7 +138,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="c:\Users\alexa\Desktop\A\OLX\CARPROG\1.png" alt="..." />
+                            <img class="card-img-top" src="OLX/CARPROG/1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -167,7 +167,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\DELL\1.png" alt="..." />
+                            <img class="card-img-top" src="OLX/DELL/1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -187,7 +187,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\VAG KCAN COMMANDER\1.png" alt="..." />
+                            <img class="card-img-top" src="OLX/VAG KCAN COMMANDER/1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -208,7 +208,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\INPA\1.png" alt="..." />
+                            <img class="card-img-top" src="OLX/INPA/1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -236,7 +236,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\VCDS\1.png" alt="..." />
+                            <img class="card-img-top" src="OLX/VCDS/1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
