--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <!-- Navigation-->navbar fixed-top navbar-expand-lg
+        <nav class=" navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#!">autodiagstore</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -58,12 +58,12 @@
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <!-- Product image-->
+                            <!-- FoxFlash  image-->
                             <img class="card-img-top" src="OLX/FOXFLASH/1.jpg" alt="..." />
-                            <!-- Product details-->
+                            <!-- FoxFlash  details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!-- FoxFlash -->
                                     <h5 class="fw-bolder">FoxFlash Reprogramações original FULL atualizações grátis vitalícias</h5>
                                     <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill"></div>
@@ -92,7 +92,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!--Kess-->
                                     <h5 class="fw-bolder">Kess 5.017 v2.80 ktag 7.020 com adaptadores</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
@@ -122,7 +122,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!-- Launch name-->
                                     <h5 class="fw-bolder">Launch CRT 5011E TPMS</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">250.00€</span>
@@ -142,7 +142,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!-- Carprog name-->
                                     <h5 class="fw-bolder">Carprog full europeu versão nova 13.77 full. Online+activação</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
@@ -171,7 +171,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!-- DELL name-->
                                     <h5 class="fw-bolder">DELL Latitude E7480 e 5470 ecrã 14’’ i5-6300 8Go RAM SSD 256Gb 6 Ger</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">400.00€</span>
@@ -191,7 +191,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!-- VAG K + CAN Commander 1.4 name-->
                                     <h5 class="fw-bolder">Diagnóstico VAG K + CAN Commander 1.4 - VW Audi</h5>
                                     <!-- Product price-->
                                     50€
@@ -212,7 +212,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!-- BMW K-DCAN INPA name-->
                                     <h5 class="fw-bolder">Máquina de diagnóstico BMW K-DCAN INPA</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
@@ -240,7 +240,7 @@
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Product name-->
+                                    <!-- VCDS name-->
                                     <h5 class="fw-bolder">VCDS VAGCOM NEX V2 Português Pt inglês 25.3.1 versão desbloqueada</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
