--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body>
-        <!-- Navigation-->navbar fixed-top navbar-expand-lg
+        <!-- Navigation-->
         <nav class=" navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#!">autodiagstore</a>
