--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </head>
     <body>
         <!-- Navigation-->
-        <nav class=" navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container px-4 px-lg-5">
                 <a class="navbar-brand" href="#!">autodiagstore</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -58,12 +58,12 @@
                 <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
                     <div class="col mb-5">
                         <div class="card h-100">
-                            <!-- FoxFlash  image-->
-                            <img class="card-img-top" src="OLX/FOXFLASH/1.jpg" alt="..." />
-                            <!-- FoxFlash  details-->
+                            <!-- Product image-->
+                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\FOXFLASH\1.jpg" alt="..." />
+                            <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- FoxFlash -->
+                                    <!-- Product name-->
                                     <h5 class="fw-bolder">FoxFlash Reprogramações original FULL atualizações grátis vitalícias</h5>
                                     <div class="d-flex justify-content-center small text-warning mb-2">
                                         <div class="bi-star-fill"></div>
@@ -78,7 +78,9 @@
                                 
                             </div>
                             <!-- Product actions-->
-                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="card-footer p-4 pt-0 border-top-0 bg-transparent"> 
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
                             </div>
                         </div>
@@ -88,11 +90,11 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="OLX/KESS/1450300.png" alt="..." />
+                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\KESS\1450300.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!--Kess-->
+                                    <!-- Product name-->
                                     <h5 class="fw-bolder">Kess 5.017 v2.80 ktag 7.020 com adaptadores</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
@@ -107,10 +109,13 @@
                                     $160.00€
                                 </div>
                             </div>
-                            <!-- Product actions-->
+                             <!-- Product actions descrição-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
+                           
                         </div>
                     </div>
                     <div class="col mb-5">
@@ -118,11 +123,11 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="OLX/LAUNCH TPMS/1.png" alt="..." />
+                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\LAUNCH TPMS\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Launch name-->
+                                    <!-- Product name-->
                                     <h5 class="fw-bolder">Launch CRT 5011E TPMS</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">250.00€</span>
@@ -131,6 +136,8 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
                         </div>
@@ -138,11 +145,11 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="OLX/CARPROG/1.png" alt="..." />
+                            <img class="card-img-top" src="c:\Users\alexa\Desktop\A\OLX\CARPROG\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- Carprog name-->
+                                    <!-- Product name-->
                                     <h5 class="fw-bolder">Carprog full europeu versão nova 13.77 full. Online+activação</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
@@ -158,6 +165,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
                         </div>
@@ -167,11 +175,11 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="OLX/DELL/1.png" alt="..." />
+                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\DELL\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- DELL name-->
+                                    <!-- Product name-->
                                     <h5 class="fw-bolder">DELL Latitude E7480 e 5470 ecrã 14’’ i5-6300 8Go RAM SSD 256Gb 6 Ger</h5>
                                     <!-- Product price-->
                                     <span class="text-muted text-decoration-line-through">400.00€</span>
@@ -180,6 +188,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
                         </div>
@@ -187,11 +196,11 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="OLX/VAG KCAN COMMANDER/1.png" alt="..." />
+                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\VAG KCAN COMMANDER\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- VAG K + CAN Commander 1.4 name-->
+                                    <!-- Product name-->
                                     <h5 class="fw-bolder">Diagnóstico VAG K + CAN Commander 1.4 - VW Audi</h5>
                                     <!-- Product price-->
                                     50€
@@ -199,6 +208,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
                             </div>
                         </div>
@@ -208,11 +218,11 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="OLX/INPA/1.png" alt="..." />
+                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\INPA\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- BMW K-DCAN INPA name-->
+                                    <!-- Product name-->
                                     <h5 class="fw-bolder">Máquina de diagnóstico BMW K-DCAN INPA</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
@@ -229,6 +239,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
                         </div>
@@ -236,11 +247,11 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="OLX/VCDS/1.png" alt="..." />
+                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\VCDS\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
-                                    <!-- VCDS name-->
+                                    <!-- Product name-->
                                     <h5 class="fw-bolder">VCDS VAGCOM NEX V2 Português Pt inglês 25.3.1 versão desbloqueada</h5>
                                     <!-- Product reviews-->
                                     <div class="d-flex justify-content-center small text-warning mb-2">
@@ -256,6 +267,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
                         </div>
