--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\FOXFLASH\1.jpg" alt="..." />
+                            <img class="card-img-top" src="\OLX\FOXFLASH\1.jpg" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -90,7 +90,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\KESS\1450300.png" alt="..." />
+                            <img class="card-img-top" src="\OLX\KESS\1450300.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -123,7 +123,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\LAUNCH TPMS\1.png" alt="..." />
+                            <img class="card-img-top" src="\OLX\LAUNCH TPMS\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -145,7 +145,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="c:\Users\alexa\Desktop\A\OLX\CARPROG\1.png" alt="..." />
+                            <img class="card-img-top" src="\OLX\CARPROG\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -175,7 +175,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\DELL\1.png" alt="..." />
+                            <img class="card-img-top" src="\OLX\DELL\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -196,7 +196,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\VAG KCAN COMMANDER\1.png" alt="..." />
+                            <img class="card-img-top" src="\OLX\VAG KCAN COMMANDER\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -218,7 +218,7 @@
                             <!-- Sale badge-->
                             <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\INPA\1.png" alt="..." />
+                            <img class="card-img-top" src="\OLX\INPA\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
@@ -247,7 +247,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Product image-->
-                            <img class="card-img-top" src="C:\Users\alexa\Desktop\A\OLX\VCDS\1.png" alt="..." />
+                            <img class="card-img-top" src="\OLX\VCDS\1.png" alt="..." />
                             <!-- Product details-->
                             <div class="card-body p-4">
                                 <div class="text-center">
