--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent"> 
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto1.html">Descrição</a></div>
 
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
                             </div>
@@ -111,7 +111,7 @@
                             </div>
                              <!-- Product actions descrição-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto2.html">Descrição</a></div>
 
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
@@ -136,7 +136,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto3.html">Descrição</a></div>
 
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
@@ -165,7 +165,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto4.html">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
                         </div>
@@ -188,7 +188,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto5.html">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
                         </div>
@@ -208,7 +208,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto6.html">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
                             </div>
                         </div>
@@ -239,7 +239,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto7.html">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
                         </div>
@@ -267,7 +267,7 @@
                             </div>
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Descrição</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto8.html">Descrição</a></div>
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
                             </div>
                         </div>
