--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="#!">Todos os produtos</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="#!">Items Populares</a></li>
-                                <li><a class="dropdown-item" href="#!">Produtos Chegando</a></li>
+                                <li><a class="dropdown-item" href="#!">Produtos Populares</a></li>
+                                <li><a class="dropdown-item" href="#!">Produtos a chegar</a></li>
                             </ul>
                         </li>
                     </ul>
