--- a/startbootstrap-shop-item-gh-pages/produto1.html
+++ b/startbootstrap-shop-item-gh-pages/produto1.html
@@ -21,15 +21,15 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-lg-4">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="autodiagstore/io/index.html">Início</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://autodiagstore.github.io/io/index.html">Início</a></li>
                         <li class="nav-item"><a class="nav-link" href="io/index.html">Sobre</a></li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Produtos</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="autodiagstore/io/index.html">Todos os produtos</a></li>
+                                <li><a class="dropdown-item" href="https://autodiagstore.github.io/io/index.html">Todos os produtos</a></li>
                                 <li><hr class="dropdown-divider" /></li>
-                                <li><a class="dropdown-item" href="autodiagstore/io/index.html">Produtos populares</a></li>
-                                <li><a class="dropdown-item" href="autodiagstore/io/index.html">Produtos a chegar</a></li>
+                                <li><a class="dropdown-item" href="https://autodiagstore.github.io/io/index.html">Produtos populares</a></li>
+                                <li><a class="dropdown-item" href="https://autodiagstore.github.io/io/index.html">Produtos a chegar</a></li>
                             </ul>
                         </li>
                     </ul>
