--- a/index.html
+++ b/index.html
@@ -283,5 +283,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+
+        <!-- ----Counter----- -->
+        <script type="text/javascript" src="https://counter.websiteout.com/js/36/0/0/1"></script>
     </body>
 </html>
