--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
         <script src="js/scripts.js"></script>
 
         <!-- ----Counter----- -->
-        <div class="container"><p class="m-0 text-center text-white">Número de visitas</p></div>
+        <div class="container"><p class="m-0 text-center text-black">Número de visitas</p></div>
         <script type="text/javascript" src="https://counter.websiteout.com/js/17/0/0/1"></script>
     </body>
 </html>
