--- a/startbootstrap-shop-item-gh-pages/produto1.html
+++ b/startbootstrap-shop-item-gh-pages/produto1.html
@@ -173,7 +173,7 @@
                 </div>
             </div>
         </section>
-        <!-- Footer-->
+               <!-- Footer-->
         <footer class="py-5 bg-dark">
             <div class="container"><p class="m-0 text-center text-white">Copyright &copy; autodiagstore 2025</p></div>
         </footer>
@@ -181,5 +181,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
+
+        <!-- ----Counter----- -->
+        <div class="container"><p class="m-0 text-center text-black">Número de visitas</p></div>
+        <script type="text/javascript" src="https://counter.websiteout.com/js/17/0/0/1"></script>
     </body>
 </html>
