--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent"> 
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto1.html">Descrição</a></div>
 
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Adicione ao carrinho</a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="OLX\KESS\1450300.png" alt="https://autodiagstore.github.io/io/startbootstrap-shop-item-gh-pages/produto2.html" />
                             <!-- Product details-->
@@ -113,7 +113,7 @@
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto2.html">Descrição</a></div>
 
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Adicione ao carrinho</a></div>
                             </div>
                            
                         </div>
@@ -121,7 +121,7 @@
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="OLX\LAUNCH TPMS\1.png" alt="https://autodiagstore.github.io/io/startbootstrap-shop-item-gh-pages/produto3.html" />
                             <!-- Product details-->
@@ -138,7 +138,7 @@
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto3.html">Descrição</a></div>
 
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Adicione ao carrinho</a></div>
                             </div>
                         </div>
                     </div>
@@ -166,14 +166,14 @@
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto4.html">Descrição</a></div>
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Adicione ao carrinho</a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="OLX\DELL\1.png" alt="https://autodiagstore.github.io/io/startbootstrap-shop-item-gh-pages/produto5.html" />
                             <!-- Product details-->
@@ -189,7 +189,7 @@
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto5.html">Descrição</a></div>
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Adicione ao carrinho</a></div>
                             </div>
                         </div>
                     </div>
@@ -209,14 +209,14 @@
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto6.html">Descrição</a></div>
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">View options</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Adicione ao carrinho</a></div>
                             </div>
                         </div>
                     </div>
                     <div class="col mb-5">
                         <div class="card h-100">
                             <!-- Sale badge-->
-                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Sale</div>
+                            <div class="badge bg-dark text-white position-absolute" style="top: 0.5rem; right: 0.5rem">Promoção</div>
                             <!-- Product image-->
                             <img class="card-img-top" src="OLX\INPA\1.png" alt="https://autodiagstore.github.io/io/startbootstrap-shop-item-gh-pages/produto7.html" />
                             <!-- Product details-->
@@ -240,7 +240,7 @@
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto7.html">Descrição</a></div>
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Adicione ao carrinho</a></div>
                             </div>
                         </div>
                     </div>
@@ -268,7 +268,7 @@
                             <!-- Product actions-->
                             <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                                 <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="startbootstrap-shop-item-gh-pages/produto8.html">Descrição</a></div>
-                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Add to cart</a></div>
+                                <div class="text-center"><a class="btn btn-outline-dark mt-auto" href="#">Adicione ao carrinho</a></div>
                             </div>
                         </div>
                     </div>
